<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/comando"
        android:inputType="textPassword"
        android:id="@+id/etComando" />

    <LinearLayout
        android:weightSum="100"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:layout_weight="80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ejecuta_comando"
            android:id="@+id/bComando" />

        <ToggleButton
            android:layout_weight="20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_toggle"
            android:checked="true"
            android:id="@+id/tbPassword" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/guate"
        android:gravity="center"
        android:id="@+id/tvResultado"
        android:textSize="45sp"/>
</LinearLayout>
